--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:9.6
+    image: postgres:16
     restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -11,11 +11,38 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
     ports:
-      - "5432:5432"
+      - "54321:5432"
+    networks:
+      - default
+
+  wkhtmltopdf:
+    build: .
+    restart: always
+    volumes:
+      - pdf_data:/media/pdf
+    ports:
+      - "80:80"
+    networks:
+      - default
+
+  redis:
+    image: redis:latest
+    restart: always
+    ports:
+      - "6379:6379"
+    networks:
+      - default
+
+networks:
+  default:
+    driver: bridge
 
 volumes:
   postgres_data:
     external: true
+  pdf_data:
+    external: false
+
 
 # docker volume create postgres_data
 # docker-compose up -d
